k8s/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: kron
    name: kron
  name: kron
