k8s/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: kronic
    name: kronic
  name: kronic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kronic
  name: kronic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kronic
  strategy: {}
  template:
    metadata:
      labels:
        app: kronic
    spec:
      serviceAccountName: kronic
      containers:
        - image: ghcr.io/mshade/kronic:latest
          imagePullPolicy: Always
          name: kronic
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 1
              memory: 1024Mi
            requests:
              cpu: 10m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kronic
  name: kronic
  namespace: kronic
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: kronic
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: kronic
  name: kronic
spec:
  ingressClassName: nginx
  rules:
    - host: kronic.local.mshade.org
      http:
        paths:
          - backend:
              service:
                name: kronic
                port:
                  number: 80
            path: /
            pathType: Prefix
